SET(FILES_UI
${CMAKE_CURRENT_SOURCE_DIR}/ProjectionsDialog.ui)
SET(FILES_H
${CMAKE_CURRENT_SOURCE_DIR}/ProjectionsDialog.h)
SET(FILES_CPP
${CMAKE_CURRENT_SOURCE_DIR}/ProjectionsDialog.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

QT5_WRAP_CPP(FILES_MOC ${FILES_H})
QT5_WRAP_UI(FILES_UI_H ${FILES_UI})

ADD_LIBRARY(projectionsdialog STATIC ${FILES_H} ${FILES_CPP} ${FILES_MOC} ${FILES_UI_H})
TARGET_LINK_LIBRARIES(projectionsdialog Qt5::Concurrent Qt5::Core Qt5::Gui Qt5::Widgets)

SET(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${FILES_CPP} ${FILES_H} ${FILES_UI} PARENT_SCOPE)
SET(LUMINANCE_MODULES_GUI ${LUMINANCE_MODULES_GUI} projectionsdialog PARENT_SCOPE)
