SET(FILES_H
${CMAKE_CURRENT_SOURCE_DIR}/HdrInputLoader.h)
SET(FILES_CPP
${CMAKE_CURRENT_SOURCE_DIR}/HdrInputLoader.cpp)

QT4_WRAP_CPP(FILES_MOC ${FILES_H})

ADD_LIBRARY(threads ${FILES_H} ${FILES_CPP} ${FILES_MOC})

SET(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${FILES_CPP} ${FILES_H} PARENT_SCOPE)
SET(LUMINANCE_MODULES_GUI ${LUMINANCE_MODULES_GUI} threads PARENT_SCOPE)
SET(LUMINANCE_MODULES_CLI ${LUMINANCE_MODULES_CLI} threads PARENT_SCOPE)
